# FastFood-POS-System

./: CMakeLists.txt  POS_System.cpp
DataBase/: CODIGOS ABRIL 2025.xlsx  CODIGOS.csv  Data_Analysis.ipynb
DataBase/JSON_database/: Beverages.json  Combos.json  Dishes.json  Extras.json  Orders.json  Wings.json
Environment/: Environment.cpp  Environment.hpp
Final_Database/: SaveOrders.cpp  SaverOrders.hpp
Menu_Items/: Menu.cpp  Menu.hpp  Menu_Items.cpp  Menu_Items.hpp
System_funcs/: NewSale.cpp  NewSale.hpp
